--- a/test/test_app/Gemfile
+++ b/test/test_app/Gemfile
@@ -9,7 +9,8 @@ gem 'rake', '~> 0.8.7'
 
 gem 'delayed_job', '~> 2.1.0'
 gem 'sqlite3-ruby', :require => 'sqlite3'
-gem 'pg'
+#gem 'pg'
+gem 'mysql2', '~> 0.2.0'
 gem 'devise'
 gem 'haml'
 gem 'hpricot'
