--- a/test/test_app/config/database.yml
+++ b/test/test_app/config/database.yml
@@ -1,10 +1,10 @@
 # SQLite version 3.x
 #   gem install sqlite3-ruby (not necessary on OS X Leopard)
 development:
-  adapter: postgresql
+  adapter: mysql2
   database: formageddon
-  username: opencongress
-  password:
+  username: root
+  password: root
   host: localhost
 
 # Warning: The database defined as "test" will be erased and
